# SDL3-GPU

./: CMakeLists.txt  compileShaders.bat
SDL3 GPU/: CMakeLists.txt  main.cpp
SDL3 GPU/shader/: shader.glsl.frag  shader.glsl.vert  shader.spv.frag  shader.spv.vert
